# cmpt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: filetils.hh.8AEF4C516E97228E.idx  httplib.h.C2BC9956F084DC81.idx  json.hpp.E8064B7463BCB22D.idx  main.cpp.DB7E5F2D0053648D.idx  one.cpp.33BD79F4EFC00ADC.idx  one.hh.690C1D71BF74AB45.idx
demo/: config.json  scratchtemplate.txt
demo/fo/2023/A2023/: sol.cpp
include/: args.hxx  crow_include  httplib.h  json.hpp
include/internal/: execf.hh  filetils.hh  logger.hh  one.hh
include/internal/config/: config.hh  template_manager.hh
include/internal/fetchers/: contest.hh  one.hh
include/internal/models/: contest_model.hh  problem_model.hh
include/models/: contest_model.hh  problem.hh
scripts/: crn  install.sh
src/: execf.cc  main.cpp
src/config/: config.cc  config_entry.cc
src/config/templarg/: templarg.cc
src/fetch/: contest.cpp  one.cpp
src/fetchers/: contest.cc  one.cc
